[gd_scene load_steps=7 format=2]

[ext_resource path="res://login.gd" type="Script" id=1]
[ext_resource path="res://Fonts/comic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://button.tscn" type="PackedScene" id=3]
[ext_resource path="res://comic_font.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="v_box_container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -169.0
margin_right = 225.0
margin_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="username" type="TextEdit" parent="v_box_container"]
margin_right = 450.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 1 )

[node name="password" type="TextEdit" parent="v_box_container"]
margin_top = 54.0
margin_right = 450.0
margin_bottom = 104.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 1 )

[node name="email" type="TextEdit" parent="v_box_container"]
margin_top = 108.0
margin_right = 450.0
margin_bottom = 158.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 1 )

[node name="login" parent="v_box_container" instance=ExtResource( 3 )]
margin_left = 114.0
margin_top = 197.0
margin_right = 335.0
margin_bottom = 302.0
rect_min_size = Vector2( 210, 105 )
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Log In"

[node name="signup" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -443.5
margin_top = -277.0
margin_right = -178.5
margin_bottom = -172.0
text = "Sign Up"

[node name="guest" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 31.5
margin_top = -277.0
margin_right = 471.5
margin_bottom = -172.0
text = "Play as Guest"

[node name="warning" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.0
margin_top = -288.0
margin_right = 264.0
margin_bottom = 290.0

[node name="label" type="Label" parent="warning"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1
autowrap = true

[node name="username_label" type="Label" parent="."]
margin_left = 28.0
margin_top = 787.0
margin_right = 294.0
margin_bottom = 838.0
custom_fonts/font = SubResource( 2 )
text = "Username"
align = 2
valign = 1

[node name="password_label" type="Label" parent="."]
margin_left = 28.0
margin_top = 843.0
margin_right = 294.0
margin_bottom = 894.0
custom_fonts/font = SubResource( 2 )
text = "Password"
align = 2
valign = 1

[node name="email_label" type="Label" parent="."]
margin_left = 28.0
margin_top = 898.0
margin_right = 294.0
margin_bottom = 949.0
custom_fonts/font = SubResource( 2 )
text = "Email"
align = 2
valign = 1

[connection signal="pressed" from="v_box_container/login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="signup" to="." method="_on_signup_pressed"]
[connection signal="pressed" from="guest" to="." method="_on_guest_pressed"]
